comment and post DAO fixes. working version